org.eclipse.jdt.compiler.apt.tests/processors/org/eclipse/jdt/compiler/apt/tests/processors/negative/NegativeModelProc#checkNegative6().mjava
	/**
	 * Check the model of resources/targets.negative.pa.Negative6
	 * @return true if all tests passed
	 */
	public boolean checkNegative6() throws Exception {
		
		// Get the root of the Negative6 model
		TypeElement element = _elementUtils.getTypeElement("targets.negative.pa.Negative6");
		if (null == element || element.getKind() != ElementKind.CLASS) {
			reportError("Element Negative6 was not found or was not a class");
			return false;
		}
		
		Document actual = XMLConverter.convertModel(Collections.singleton(element));
		
    	InputSource source = new InputSource(new StringReader(NEGATIVE_6_MODEL));
    	DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
        Document expected = factory.newDocumentBuilder().parse(source);

        boolean success = XMLComparer.compare(actual, expected, System.out);
        if (!success) {
        	reportError("Test Negative6: mismatch between actual and expected models; see console for details.");
        }
        return success;
	}

